# garray

./: CMakeLists.txt  README.md
benchmark/: Makefile  array1D_bm.cpp  fixedarray1D_bm.cpp  run3.sh
example/: Makefile  example0.cpp  example0.x  example1.cpp  example1.x  example2.cpp  example2.x  example3.cpp  example3.x  example4.cpp  example4.x  example5.cpp  example5.x  example6.cpp  run.sh
lib/cmake/Strictpp/: StrictppConfig.cmake
src/: array_IO.hpp  array_base1D.hpp  array_base2D.hpp  array_ops.hpp  array_stable_ops.hpp  attach1D.hpp  attach2D.hpp  derived1D.hpp  derived2D.hpp  derived_base.hpp  fixed_array_base1D.hpp  fixed_array_base2D.hpp  iterator.hpp  slice.hpp  slicearray_base1D.hpp  slicearray_base2D.hpp  strict.hpp
src/ArrayCommon/: algorithm.hpp  array_auxiliary.hpp  array_common.hpp  array_traits.hpp  index_helper.hpp
src/Expr/: binary.hpp  deri  exclude_last.hpp  expr_traits.hpp  special.hpp  types.hpp  unary.hpp
src/StrictCommon/: auxiliary_types.hpp  config.hpp  constants.hpp  error.hpp  strict_IO.hpp  strict_literals.hpp  strict_math.hpp  strict_val.hpp  strict_val_ops.hpp  use.hpp
src/Util/: error_tools.hpp  random.hpp  random_traits.hpp  semi_random.hpp  timer.hpp  util.hpp
tests/: Makefile  array1D.cpp  constexpr.cpp  empty.cpp  error_tools.cpp  fixed_array1D.cpp  info.cpp  run.sh  test.hpp
