cmake_minimum_required(VERSION 3.30)
project(strictpp)

set(CMAKE_CXX_STANDARD 20)

include_directories(src)
include_directories(src/ArrayCommon)
include_directories(src/Expr)
include_directories(src/StrictCommon)
include_directories(src/Util)

add_executable(strictpp
    example/example0.cpp
    src/ArrayCommon/algorithm.hpp
    src/ArrayCommon/alignment.hpp
    src/ArrayCommon/array_auxiliary.hpp
    src/ArrayCommon/array_common.hpp
    src/ArrayCommon/array_traits.hpp
    src/ArrayCommon/index_helper.hpp
    src/ArrayCommon/use.hpp
    src/ArrayCommon/valid.hpp
    src/Expr/binary.hpp
    src/Expr/exclude_last.hpp
    src/Expr/expr.hpp
    src/Expr/expr_traits.hpp
    src/Expr/functors.hpp
    src/Expr/special.hpp
    src/Expr/types.hpp
    src/Expr/unary.hpp
    src/StrictCommon/auxiliary_types.hpp
    src/StrictCommon/common_traits.hpp
    src/StrictCommon/config.hpp
    src/StrictCommon/constants.hpp
    src/StrictCommon/error.hpp
    src/StrictCommon/strict_common.hpp
    src/StrictCommon/strict_IO.hpp
    src/StrictCommon/strict_literals.hpp
    src/StrictCommon/strict_math.hpp
    src/StrictCommon/strict_traits.hpp
    src/StrictCommon/strict_val.hpp
    src/StrictCommon/strict_val_ops.hpp
    src/StrictCommon/use.hpp
    src/Util/error_tools.hpp
    src/Util/random.hpp
    src/Util/random_traits.hpp
    src/Util/semi_random.hpp
    src/Util/timer.hpp
    src/Util/util.hpp
    src/array_base1D.hpp
    src/array_base2D.hpp
    src/array_IO.hpp
    src/array_ops.hpp
    src/array_stable_ops.hpp
    src/attach1D.hpp
    src/attach2D.hpp
    src/concepts.hpp
    src/derived1D.hpp
    src/derived2D.hpp
    src/derived_base.hpp
    src/fixed_array_base1D.hpp
    src/fixed_array_base2D.hpp
    src/iterator.hpp
    src/slice.hpp
    src/slicearray_base1D.hpp
    src/slicearray_base2D.hpp
    src/strict.hpp)
